[tool.poetry]
name = "dsp"
version = "0.1.0"
description = "Deep Stochastic Processes"
authors = ["Daniel Jenson <daniel.a.jenson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
arviz = "^0.18.0"
flax = "^0.8.0"
hydra-core = "^1.3.2"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
optax = "^0.2.1"
pandas = "^2.2.2"
pillow = "^10.4.0"
plotly = "^5.22.0"
python = "^3.12"
sps = {git = "ssh://git@github.com/MLGlobalHealth/sps.git"}
tensorflow = "^2.16.2"
tensorflow-datasets = "^4.9.6"
tqdm = "^4.66.2"
wandb = "^0.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[[tool.poetry.source]]
name = "PyPI"
priority = "default"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
