[tool.poetry]
name = "dl4bi"
version = "0.1.0"
description = "Deep Learning for Bayesian Inference (DL4BI)"
authors = ["Daniel Jenson <daniel.a.jenson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
arviz = "^0.18.0"
datasets = "^3.0.0"
einops = "^0.8.0"
flax = "^0.8.0"
hydra-core = "^1.3.2"
imageio = "^2.35.1"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
optax = "^0.2.1"
pandas = "^2.2.2"
pillow = "^10.4.0"
pygifsicle = "^1.1.0"
python = "^3.12"
scipy = "^1.14.1"
sps = {git = "ssh://git@github.com/MLGlobalHealth/sps.git"}
tensorflow = "^2.16.2"
tensorflow-datasets = "^4.9.6"
tiktoken = "^0.7.0"
tqdm = "^4.66.2"
wandb = "^0.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
